boreal/tests/assets/invalid_files/parsing/str_to_hex_int3.yar
rule a {
    strings:
        $a = /\x1/
    condition:
        $a
}
